searchbar overflow on mobile bugfix

--- a/css/404.css
+++ b/css/404.css
@@ -3,7 +3,7 @@ body{
     overflow-y: hidden;
 }
 .error-container {
-    height: 58vh;
+    height: 70vh;
     background-color: #1d2027;
     margin-top:.5rem;
     padding-bottom:2rem;
